# dental-clinic-manager

./: CLAUDE.md  dcm.html  package-lock.json  plan.md
.claude/: settings.local.json
dental-clinic-manager/python-workers/regime/: .env.example  .gitignore  config.py  labeling.py  macro_loader.py  pyproject.toml  storage.py  supabase_client.py  train_worker.py
dental-clinic-manager/python-workers/regime/features/: feature_engineer.py
dental-clinic-manager/python-workers/regime/fetchers/: ecos_fetcher.py  fred_fetcher.py  price_fetcher.py  yahoo_fetcher.py
dental-clinic-manager/python-workers/regime/launchd/: com.dental.regime.plist
dental-clinic-manager/python-workers/regime/models/: hmm_voting.py  kernel_markov.py  reservoir_hypernet.py
dental-clinic-manager/python-workers/regime/tests/: test_end_to_end.py  test_smoke.py
rl-inference-server/: .env.example  .gitignore  README.md  pyproject.toml
rl-inference-server/scripts/: benchmark_dow30.py  data_loader.py  data_loader_v2.py  dow30_env.py  dow30_env_v2.py  ensemble_dow30.py  eval_ppo_dow30.py  eval_ppo_dow30_v2.py  sweep_ppo_dow30.py  train_ppo_dow30.py  train_ppo_dow30_v2.py  walkforward_dow30.py  walkforward_dow30_v2.py
rl-inference-server/src/: auth.py  config.py  main.py  model_registry.py  schemas.py  state.py
rl-inference-server/src/adapters/: base.py  sb3.py
rl-inference-server/src/inference/: backtest.py  portfolio.py
rl-inference-server/tests/: conftest.py  test_backtest.py  test_dow30_env.py  test_health.py  test_model_registry.py  test_predict_portfolio.py  test_sb3_adapter.py
(+2110 files in other folders)
