[project]
name = "rl-inference-server"
version = "0.1.0"
description = "RL 모델 추론 서버 (FastAPI + PyTorch + stable-baselines3)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "torch>=2.2",
  "stable-baselines3>=2.3",
  "numpy>=1.26",
  "pandas>=2.2",
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
finrl = ["finrl>=0.3.6"]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
