[project]
name = "regime-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "hmmlearn>=0.3",
  "xgboost>=2.0",
  "statsmodels>=0.14",
  "reservoirpy>=0.3.12",
  "torch>=2.2",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "httpx>=0.27",
  "supabase>=2.6",
  "joblib>=1.4",
  "python-dotenv>=1.0",
  "pydantic>=2.7",
  "yfinance>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["regime*"]

[tool.ruff]
line-length = 100
target-version = "py311"
